--- a/note-list/package.json
+++ b/note-list/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-foreach": "^0.1.1",
+    "react-markdown": "^6.0.2",
     "react-scripts": "4.0.3",
+    "todo-item": "^1.0.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
